Markdown! Pages folder!
Guess I can't move 404 out of root, but at least we're in Markdown now >:)

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ markdown: kramdown
 gems:
   - jekyll-sitemap
 
+include: ['_pages']
+
 name: Jarku Tang
 url: https://tarvos.github.io
 instagram: logicku
